Fix tile on mobile version (positioning)

--- a/mobile/css/commun.css
+++ b/mobile/css/commun.css
@@ -44,6 +44,11 @@ legend{
     background-color: #616154;
     margin-bottom: 5px;
     color : white;
+    min-width : 150px;
+    min-height: 150px;
+    vertical-align: top;
+    padding : 3px;
+    margin : 3px;
 }
 
 .dashboard-widget .collectDate{
